--- a/services/web/templates/base.html
+++ b/services/web/templates/base.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/795eb3e898.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/master.css' %}">
     <link rel="stylesheet" href="{% static 'css/cropper.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/nano.min.css' %}">
     <title>
       {% block title %}{% endblock %}
       - ClothesManager</title>
@@ -110,6 +111,7 @@
 
   <script src="{% static 'js/cropper.min.js' %}"></script>
   <script src="{% static 'js/jquery-cropper.min.js' %}"></script>
+  <script src="{% static 'js/pickr.min.js' %}"></script>
   <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" crossorigin="anonymous"></script>
   <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js" crossorigin="anonymous"></script>
   <script>
