--- a/services/web/templates/closet/add_clothes.html
+++ b/services/web/templates/closet/add_clothes.html
@@ -50,9 +50,7 @@
       </div>
       <div class="form-group">
         {{ form.picture.label_tag }}
-        <div style="border: transparent;">
-          {{ form.picture }}
-        </div>
+        {{ form.picture }}
         {{ form.picture.errors }}
       </div>
       <div class="row">
@@ -70,14 +68,16 @@
           <div id="cropped-preview-img"></div>
         </div>
       </div>
+      {% if add_or_edit == 'Edit' %}
       <div class="form-group row">
-        <div class="col-sm-1">{{ form.color.label_tag }}</div>
+        <div class="col-sm-1">Color:</div>
         <div class="col-sm-11">
-          <button type="button" id="pickrbtn" class="btn shadow-sm pickrbtn" style="background-color: {{ clothes.color }};">Choose Color</button>
+          <a href="{% url 'closet:clothes_color' clothes.pk %}" role="button" class="btn" style="background-color: {{ clothes.color }};"><span style="visibility:hidden">a</span></a>
         </div>
 
         {{ form.color.errors }}
       </div>
+      {% endif %}
       <div class="form-group">
         {{ form.publish.label_tag }}
         {{ form.publish }}
@@ -102,62 +102,7 @@
   <script>
     $('#preview-title').hide()
   </script>
-  <script>
-    const pickr = Pickr.create({
-      el: '.pickrbtn',
-      theme: 'nano', // or 'monolith', or 'nano'
 
-      default: '{{ clothes.color }}',
-      useAsButton: true,
-      // comparison: false,
-      defaultRepresentation: 'RGBA',
-
-      swatches: [
-        'rgba(244, 67, 54, 1)',
-        'rgba(233, 30, 99, 0.95)',
-        'rgba(156, 39, 176, 0.9)',
-        'rgba(103, 58, 183, 0.85)',
-        'rgba(63, 81, 181, 0.8)',
-        'rgba(33, 150, 243, 0.75)',
-        'rgba(3, 169, 244, 0.7)',
-        'rgba(0, 188, 212, 0.7)',
-        'rgba(0, 150, 136, 0.75)',
-        'rgba(76, 175, 80, 0.8)',
-        'rgba(139, 195, 74, 0.85)',
-        'rgba(205, 220, 57, 0.9)',
-        'rgba(255, 235, 59, 0.95)',
-        'rgba(255, 193, 7, 1)'
-      ],
-
-      components: {
-
-        // Main components
-        preview: true,
-        opacity: true,
-        hue: true,
-
-        // Input / output Options
-        interaction: {
-            hex: false,
-            rgba: false,
-            hsla: false,
-            hsva: false,
-            cmyk: false,
-            input: true,
-            clear: true,
-            save: true
-        }
-      }
-    }).on('save', color => {
-      const selectColor = color.toRGBA().toString(3);
-      console.log(selectColor);
-      document.getElementById('pickrbtn').style.backgroundColor = selectColor;
-      pickr.hide();
-    }).on('cancel', color => {
-      pickr.hide();
-    });
-
-  </script>
   <!-- Make dropdowns for categories -->
   <script>
     const parentCategoryElement = $('#id_parent_category');
