--- a/services/web/templates/base.html
+++ b/services/web/templates/base.html
@@ -48,9 +48,7 @@
                     {% if request.user.profile.picture %}
                       <img src="{{ request.user.profile.picture.url }}" class="rounded-lg" width="auto" height="40px"/>
                     {% else %}
-                      <svg class="bd-placeholder-img rounded-lg" width="2rem" height="2rem" xmlns="http://www.w3.org/2000/svg" focusable="false" role="img">
-                        <rect width="100%" height="100%" fill="#{{ request.user.profile.color }}"/>
-                      </svg>
+                      <canvas width="30px" height="30px" style="background-color: #{{ request.user.profile.color }};"></canvas>
                     {% endif %}
                 {% else %}
                   <i class="fas fa-user"></i>
