Changed folder name to include

--- a/services/web/templates/include/cropping_modal.html
+++ b/services/web/templates/include/cropping_modal.html
@@ -11,7 +11,7 @@
         <img src="" id="image" style="max-width: 100%;">
       </div>
       <div class="modal-footer">
-        <div class="btn-group pull-left" role="group">
+        <div class="btn-group float-left" role="group">
           <button type="button" class="btn btn-default js-zoom-in">
             <i class="fas fa-search-plus"></i>
           </button>
