Adjusted include name

--- a/services/web/templates/accounts/edit_profile.html
+++ b/services/web/templates/accounts/edit_profile.html
@@ -37,7 +37,7 @@
 </div>
 
 <!-- Modal to crop the img -->
-{% include "snippets/cropping_modal.html" %}
+{% include "include/cropping_modal.html" %}
 {% endblock %}
 
 {% block script %}
