--- a/services/web/templates/accounts/users_list.html
+++ b/services/web/templates/accounts/users_list.html
@@ -23,7 +23,7 @@
 {% block content %}
 <div class="container">
   {% if object_list %}
-    {% include "snippets/user_list.html" %}
+    {% include "include/user_list.html" %}
   {% else %}
     <h3>No Users Yet</h3>
   {% endif %}
