Changed how to display if clothes is published

--- a/services/web/templates/closet/clothes_list.html
+++ b/services/web/templates/closet/clothes_list.html
@@ -42,7 +42,13 @@
                   <td>
                     {% include "include/color_bar.html" %}
                   </td>
-                  <td>{{ clothes.publish }}</td>
+                  <td>
+                    {% if clothes.publish %}
+                      <i class="fas fa-check"></i>
+                    {% else %}
+                      <i class="fas fa-times"></i>
+                    {% endif %}
+                  </td>
                   <td><input type="checkbox" name="delete" value="{{ clothes.pk }}"></td>
                 </tr>
               {% endfor %}
