--- a/services/web/templates/include/color_bar.html
+++ b/services/web/templates/include/color_bar.html
@@ -1,16 +1,25 @@
 {% spaceless %}
-  {% for color in clothes.colors.all %}
-    {% if forloop.first %}
-      <div id="id_colors-0" value="{{ color }}" class="btn pickrbtn" style="background-color: {{ color }}; border-radius: 10px 0 0 10px;">
-        <span style="visibility:hidden">a</span></div>
-    {% else %}
-      {% if forloop.last %}
-        <div value="{{ color }}" id="id_colors-2" class="btn pickrbtn" style="background-color: {{ color }}; border-radius: 0 10px 10px 0;">
+  {% if clothes.colors.all %}
+    {% for color in clothes.colors.all %}
+      {% if forloop.first %}
+        <div id="id_colors-0" class="btn pickrbtn" style="background-color: {{ color }}; border-radius: 10px 0 0 10px;">
           <span style="visibility:hidden">a</span></div>
       {% else %}
-        <div value="{{ color }}" id="id_colors-1" class="btn pickrbtn" style="background-color: {{ color }}; border-radius: 0 0 0 0;">
-          <span style="visibility:hidden">a</span></div>
+        {% if forloop.last %}
+          <div id="id_colors-2" class="btn pickrbtn" style="background-color: {{ color }}; border-radius: 0 10px 10px 0;">
+            <span style="visibility:hidden">a</span></div>
+        {% else %}
+          <div id="id_colors-1" class="btn pickrbtn" style="background-color: {{ color }}; border-radius: 0 0 0 0;">
+            <span style="visibility:hidden">a</span></div>
+        {% endif %}
       {% endif %}
-    {% endif %}
-  {% endfor %}
+    {% endfor %}
+  {% else %}
+    <div id="id_colors-0" class="btn border pickrbtn" style="background-color: white; border-radius: 10px 0 0 10px;">
+      <span style="visibility:hidden">a</span></div>
+    <div id="id_colors-1" class="btn border pickrbtn" style="background-color: white; border-radius: 0 0 0 0;">
+      <span style="visibility:hidden">a</span></div>
+    <div id="id_colors-2" class="btn border pickrbtn" style="background-color: white; border-radius: 0 10px 10px 0;">
+      <span style="visibility:hidden">a</span></div>
+  {% endif %}
 {% endspaceless %}
