--- a/services/web/templates/accounts/user_profile.html
+++ b/services/web/templates/accounts/user_profile.html
@@ -13,15 +13,23 @@
 {% block content %}
   <div class="container">
     <h3>
-    {% if user.profile.picture %}
-      <img src="{{ user.profile.picture.url }}" class="rounded-lg" width="auto" height="40px"/>
-    {% else %}
-      <svg class="bd-placeholder-img rounded-lg" width="2rem" height="2rem" xmlns="http://www.w3.org/2000/svg" focusable="false" role="img">
-        <rect width="100%" height="100%" fill="#{{ user.profile.color }}"/>
-      </svg>
-    {% endif %}
-      {{ user.username }}</h3>
+      {% if user.profile.picture %}
+        <img src="{{ user.profile.picture.url }}" class="rounded-lg" width="auto" height="40px"/>
+      {% else %}
+        <canvas class="align-middle rounded-lg" width="30px" height="30px" style="background-color: #{{ user.profile.color }};"></canvas>
+      {% endif %}
+      {{ user.username }}
       {% if request.user.username == user.username %}
+        <a href="{% url 'accounts:edit' user.username %}" class="btn btn-primary float-right" role="button">edit</a>
+      {% else %}
+        {% if is_following %}
+          <a href="{% url 'accounts:unfollow' user.username %}" class="btn btn-success float-right" role="button">Unfollow</a>
+        {% else %}
+          <a href="{% url 'accounts:follow' user.username %}" class="btn btn-success float-right" role="button">Follow</a>
+        {% endif %}
+      {% endif %}
+    </h3>
+    {% if request.user.username == user.username %}
       <table border="0" class="table">
         <tr>
           <th>Username</th>
@@ -29,7 +37,13 @@
         </tr>
         <tr>
           <th>Full name</th>
-          <td>{{ user.full_name }}</td>
+          <td>
+            {% if user.full_name %}
+              {{ user.full_name }}
+            {% else %}
+              ----------------
+            {% endif %}
+          </td>
         </tr>
         <tr>
           <th>E-mail</th>
@@ -38,16 +52,26 @@
         <tr>
           <th>Website</th>
           <td>
-            <a href="{{ user.profile.webpage }}">{{ user.profile.webpage }}</a>
+            {% if user.profile.webpage %}
+              <a href="{{ user.profile.webpage }}">{{ user.profile.webpage }}</a>
+            {% else %}
+              ----------------
+            {% endif %}
           </td>
         </tr>
         <tr>
           <th>About Me</th>
-          <td>{{ user.profile.about_me }}</td>
+          <td>
+            {% if user.profile.about_me %}
+              {{ user.profile.about_me }}
+            {% else %}
+              ----------------
+            {% endif %}
+          </td>
         </tr>
         <tr>
           <th>Last Login</th>
-          <td>{{ user.last_login }}</td>
+          <td>{{ user.last_login|date:"m/d/Y f"  }}</td>
         </tr>
         <tr>
           <th>
@@ -59,7 +83,7 @@
           <th>
             <a href="{% url 'accounts:followings' %}">Following</a>
           </th>
-          <td>{{ user.followings.count }}</td>
+          <td>{{ user.following.count }}</td>
         </tr>
         <tr>
           <th>
@@ -74,37 +98,39 @@
           <td>{{ user.outfits.count }}</td>
         </tr>
       </table>
-      <small>
-        <a href="{% url 'accounts:edit' user.username %}">edit</a>
-      </small>
-
     {% else %}
       <table border="0" class="table">
         <tr>
           <th>Username</th>
           <td>{{ user.username }}</td>
         </tr>
+        {% if user.full_name  %}
         <tr>
           <th>Full name</th>
           <td>{{ user.full_name }}</td>
         </tr>
+        {% endif %}
+        {% if user.profile.website %}
         <tr>
           <th>Website</th>
           <td>
             <a href="{{ user.profile.webpage }}">{{ user.profile.webpage }}</a>
           </td>
         </tr>
+        {% endif %}
+        {% if user.profile.about_me %}
         <tr>
           <th>About Me</th>
           <td>{{ user.profile.about_me }}</td>
         </tr>
+        {% endif %}
         <tr>
           <th>Followers</th>
           <td>{{ user.followers.count }}</td>
         </tr>
         <tr>
           <th>Following</th>
-          <td>{{ user.followings.count }}</td>
+          <td>{{ user.following.count }}</td>
         </tr>
         <tr>
           <th>
@@ -119,12 +145,6 @@
           <td>{{ user.outfits.count }}</td>
         </tr>
       </table>
-      {% if is_following %}
-        <a href="{% url 'accounts:unfollow' user.username %}">Unfollow</a>
-      {% else %}
-        <a href="{% url 'accounts:follow' user.username %}">Follow</a>
-      {% endif %}
     {% endif %}
   </div>
-  <!-- container -->
 {% endblock %}
