--- a/services/web/templates/index.html
+++ b/services/web/templates/index.html
@@ -48,9 +48,9 @@
                   {{ forecast.weather.name }}
                 </td>
                 <td>
-                  {{ forecast.highest_temp }}
+                  {{ forecast.highest_temp }} &ordm;C
                   /
-                  {{ forecast.lowest_temp }}
+                  {{ forecast.lowest_temp }} &ordm;C
                 </td>
                 <td>
                   {{ forecast.rain_chance }}
@@ -74,7 +74,7 @@
         <div class="card-body">
           <div class="row">
             <div class="col-xl-4">
-              <div class="card">
+              <div class="card mb-3">
                 <div class="card-header">
                   <i class="fas fa-dice-one mr-1"></i>
                   Outerwears
@@ -97,7 +97,7 @@
               </div>
             </div>
             <div class="col-xl-4">
-              <div class="card">
+              <div class="card mb-3">
                 <div class="card-header">
                   <i class="fas fa-dice-two mr-1"></i>
                   Tops
@@ -120,7 +120,7 @@
               </div>
             </div>
             <div class="col-xl-4">
-              <div class="card">
+              <div class="card mb-3">
                 <div class="card-header">
                   <i class="fas fa-dice-three mr-1"></i>
                   Bottoms
