--- a/services/web/templates/closet/outfits_list.html
+++ b/services/web/templates/closet/outfits_list.html
@@ -5,7 +5,9 @@
 {% block breadcrumb %}
   <ol class="breadcrumb mb-4 pt-3">
     <li class="breadcrumb-item">Closet</li>
-    <li class="breadcrumb-item"><a href="{% url 'closet:outfits' %}">Outfits</a></li>
+    <li class="breadcrumb-item">
+      <a href="{% url 'closet:outfits' %}">Outfits</a>
+    </li>
     <li class="breadcrumb-item active">{{ who }}</li>
   </ol>
 {% endblock %}
@@ -16,27 +18,33 @@
     {% if request.user.username == user.username %}
       {% if object_list %}
         <table class="table table-hover">
-          <tr>
+          <thead>
             <th>Outfit Name</th>
             <th>Outerwears</th>
             <th>Tops</th>
             <th>Extra Tops</th>
             <th>Bottoms</th>
-            <th>Addtime</th>
             <th>Publish</th>
-          </tr>
+          </thead>
           {% for outfit in object_list %}
-            <tr>
-              <td>
-                <a href="{% url 'closet:edit_outfit' outfit.pk %}">{{ outfit.name }}</a>
-              </td>
-              <td>{{ outfit.outerwear }}</td>
-              <td>{{ outfit.top }}</td>
-              <td>{{ outfit.extra_top }}</td>
-              <td>{{ outfit.bottom }}</td>
-              <td>{{ outfit.created_at }}</td>
-              <td>{{ outfit.publish }}</td>
-            </tr>
+            <tbody class="centerTable">
+              <tr>
+                <td>
+                  <a href="{% url 'closet:edit_outfit' outfit.pk %}">{{ outfit.name }}</a>
+                </td>
+                <td>{{ outfit.outerwear }}</td>
+                <td>{{ outfit.top }}</td>
+                <td>{{ outfit.extra_top }}</td>
+                <td>{{ outfit.bottom }}</td>
+                <td>
+                  {% if clothes.publish %}
+                    <i class="fas fa-check"></i>
+                  {% else %}
+                    <i class="fas fa-times"></i>
+                  {% endif %}
+                </td>
+              </tr>
+            </tbody>
           {% endfor %}
         </table>
       {% else %}
@@ -45,29 +53,29 @@
       <a href="{% url 'closet:set' %}" class="btn btn-dark" role="button">Set Outfit</a>
 
     {% else %}
-    {% if object_list %}
-      <table class="table table-hover">
-        <tr>
-          <th>Outfit Name</th>
-          <th>Outerwears</th>
-          <th>Tops</th>
-          <th>Extra Tops</th>
-          <th>Bottoms</th>
-          <th>Addtime</th>
-        </tr>
-        {% for outfit in object_list %}
-          <tr>
-            <td>
-              <a href="{% url 'closet:edit_outfit' outfit.pk %}">{{ outfit.name }}</a>
-            </td>
-            <td>{{ outfit.outerwear }}</td>
-            <td>{{ outfit.top }}</td>
-            <td>{{ outfit.extra_top }}</td>
-            <td>{{ outfit.bottom }}</td>
-            <td>{{ outfit.created_at }}</td>
-          </tr>
-        {% endfor %}
-      </table>
+      {% if object_list %}
+        <table class="table table-hover">
+          <thead>
+            <th>Outfit Name</th>
+            <th>Outerwears</th>
+            <th>Tops</th>
+            <th>Extra Tops</th>
+            <th>Bottoms</th>
+          </thead>
+          {% for outfit in object_list %}
+            <tbody class="centerTable">
+              <tr>
+                <td>
+                  <a href="{% url 'closet:edit_outfit' outfit.pk %}">{{ outfit.name }}</a>
+                </td>
+                <td>{{ outfit.outerwear }}</td>
+                <td>{{ outfit.top }}</td>
+                <td>{{ outfit.extra_top }}</td>
+                <td>{{ outfit.bottom }}</td>
+              </tr>
+            </tbody>
+          {% endfor %}
+        </table>
       {% else %}
         <h3>No Outfits</h3>
       {% endif %}
