--- a/services/web/templates/accounts/users_list.html
+++ b/services/web/templates/accounts/users_list.html
@@ -4,7 +4,7 @@
   {% if followers_or_following %}
     {{ followers_or_following }}
   {% else %}
-    Users list
+    Explore
   {% endif %}
 {% endblock %}
 
