--- a/services/web/templates/base.html
+++ b/services/web/templates/base.html
@@ -7,6 +7,7 @@
   <head>
     <meta charset="utf-8">
     <script src="https://kit.fontawesome.com/795eb3e898.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <link rel="stylesheet" href="{% static 'css/master.css' %}">
     <link rel="stylesheet" href="{% static 'css/cropper.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/nano.min.css' %}">
